Change endpoints for pdf/zip
