# backend/openapi2-hermes-v2.yaml
@@ -765,22 +765,22 @@ paths:
           description: Internal server error, please contact support
           schema:
             $ref: '#/definitions/ErrorDTO'
-  /timetables/pdfs/lines/{lineId}/stations/{stationId}:
+  /timetables/pdfs:
     get:
       tags:
         - pdfs
-      operationId: "generateSingleLineStationPdf"
+      operationId: "generateSchedulePdf"
       summary: Creates pdf file for single station on specific line
       produces:
         - application/pdf
       parameters:
         - name: lineId
-          in: path
+          in: query
           description: Id of the line for whose station pdf is generated
           required: true
           type: string
         - name: stationId
-          in: path
+          in: query
           description: Id of the station for which pdf is generated
           required: true
           type: string
@@ -807,19 +807,24 @@ paths:
           description: Internal server error, please contact support
           schema:
             $ref: '#/definitions/ErrorDTO'
-  /timetables/pdfs/stations/{stationId}:
+  /timetables/zips:
     get:
       tags:
-        - pdfs
-      operationId: "generateStationSchedulesZip"
-      summary: Creates zip file for single station on all lines within passed schedules
+        - zips
+      operationId: "generateSchedulesZip"
+      summary: Creates zip file with pdf schedules according to given parameters
       produces:
         - application/zip
       parameters:
+        - name: lineId
+          in: query
+          description: Id of the line for whose station pdf is generated
+          required: false
+          type: string
         - name: stationId
-          in: path
-          description: Id of the station for which pdfs are generated
-          required: true
+          in: query
+          description: Id of the station for which pdf is generated
+          required: false
           type: string
         - name: scheduleIds
           in: query
@@ -831,48 +836,11 @@ paths:
             type: string
       responses:
         200:
-          description: Zip with pdfs for a given station
+          description: Zip file with pdf schedules
           schema:
             type: file
         404:
-          description: Station or one of schedules is not found
-        400:
-          description: Problem with the request, such as a missing, invalid or type mismatched parameter
-          schema:
-            $ref: '#/definitions/ErrorDTO'
-        500:
-          description: Internal server error, please contact support
-          schema:
-            $ref: '#/definitions/ErrorDTO'
-  /timetables/pdfs/lines/{lineId}:
-    get:
-      tags:
-        - pdfs
-      operationId: "generateLineSchedulesZip"
-      summary: Creates zip file for the whole line with all it's stations
-      produces:
-        - application/zip
-      parameters:
-        - name: lineId
-          in: path
-          description: Id of the line for which zip file is created
-          required: true
-          type: string
-        - name: scheduleIds
-          in: query
-          description: List of ids of schedules to be included in zip
-          required: true
-          type: array
-          minItems: 1
-          items:
-            type: string
-      responses:
-        200:
-          description: Zip for a given line
-          schema:
-            type: file
-        404:
-          description: Line or one of schedules is not found
+          description: Line, station or one of schedules is not found
         400:
           description: Problem with the request, such as a missing, invalid or type mismatched parameter
           schema:
